--- a/examples/animations/index.html
+++ b/examples/animations/index.html
@@ -3,7 +3,7 @@
 <link href="../global.css" rel="stylesheet"/>
 <link href="app.css" rel="stylesheet"/>
 <body>
-<h1 class="breadcrumbs"><a href="../index.html">React Router Examples</a> / Animations</h1>
-<div id="example"/>
+<!-- <h1 class="breadcrumbs"><a href="../index.html">React Router Examples</a> / Animations</h1> -->
+<!-- <div id="example"/> -->
 <script src="../global-bundle.js"></script>
 <script src="app-bundle.js"></script>
